tests/ui/asm/naked-functions-no-leak-target-feature-aarch64.stderr
error: instruction requires: i8mm
   |
note: instantiated into assembly here
  --> <inline asm>:16:1
   |
LL | usdot   v0.4s, v1.16b, v2.4b[3]
   | ^

error: instruction requires: i8mm
   |
note: instantiated into assembly here
  --> <inline asm>:16:1
   |
LL | usdot   v0.4s, v1.16b, v2.4b[3]
   | ^

error: aborting due to 2 previous errors

